<resources>
    <string name="app_name">BottomBar&amp;DrawerNavVar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mahady_hasan_miraz">Mahady Hasan Miraz</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="age_converter">Age Converter</string>
    <string name="theme">Theme</string>
    <string name="font_style">Font Style</string>
    <string name="logout">Logout</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="theme_1">Theme-1</string>
    <string name="theme_2">Theme-2</string>
    <string name="theme_3">Theme-3</string>
    <string name="font_1">Font-1</string>
    <string name="font_2">Font-2</string>
    <string name="font_3">Font-3</string>
</resources>