<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bmiCalc"
        android:title="@string/bmi_calculator"
        android:icon="@drawable/bmi"/>

    <item
        android:id="@+id/unitConv"
        android:title="@string/unit_converter"
        android:icon="@drawable/convert"/>

    <item
        android:id="@+id/ageConv"
        android:title="@string/age_converter"
        android:icon="@drawable/age"/>

    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        android:icon="@drawable/theme"/>

    <item
        android:id="@+id/font"
        android:title="@string/font_style"
        android:icon="@drawable/font_size"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"/>
</menu>